insert section checkin
